@@ -2,31 +2,33 @@ unit mycrypto;
 
 interface
 
-uses Classes, slmd5;
+uses
+  Classes, slmd5;
 
-function GenPem(certpath: String; keylen: Integer; commonname: String): Boolean;
+function GenPem(const certpath: String; const keylen: Integer; const commonname: String): Boolean;
 procedure MycryptoStart(pp: TslMD5Data);
 procedure MycryptoStop;
 function DecryptUDP(s: String): String;
 function EncryptUDP(s: String): String;
 procedure  MyCryptoInit;
-procedure MyCryptoUnInit;
 
 implementation
 
-uses SysUtils, delphiblowfish, slssl, helper, configunit, debugunit,
-  Math, mystrings;
+uses
+  SysUtils, delphiblowfish, slssl, helper, configunit, debugunit, Math, mystrings;
 
-const section = 'crypto';
-      UDP_MIN_PADDING = 8;
-      UDP_MAX_PADDING = 32;
-      MAX_UDP_PACKET = 16384;
+const
+  section = 'crypto';
+  UDP_MIN_PADDING = 8;
+  UDP_MAX_PADDING = 32;
+  MAX_UDP_PACKET = 16384;
 
-var KeyData: TBlowfishData;
+var
+  KeyData: TBlowfishData;
 
-
-function GenPem(certpath: String; keylen: Integer; commonname: String): Boolean;
-var b, r, xn, x, xr, xne, evp: Pointer;
+function GenPem(const certpath: String; const keylen: Integer; const commonname: String): Boolean;
+var
+  b, r, xn, x, xr, xne, evp: Pointer;
 begin
   Result:= False;
 
@@ -141,72 +143,69 @@ begin
 end;
 
 procedure MycryptoStart(pp: TslMD5Data);
-const IV: array[0..7] of Byte = (0,0,0,0,0,0,0,0);
-var cert: String;
+const
+  IV: array[0..7] of Byte = (0,0,0,0,0,0,0,0);
+var
+  cert: String;
 begin
-  cert:= config.ReadString(section, 'certificate', 'slftp.pem');
+  cert := config.ReadString(section, 'certificate', 'slftp.pem');
   if not FileExists(cert) then
   begin
     Debug(dpError, section, 'Certificate not found, generating new one');
     GenPem(cert, config.ReadInteger(section, 'keylen', 2048), MyGetusername());
   end;
 
-
   BlowfishInit(KeyData, @pp, SizeOf(pp), @iv);
 end;
 
 procedure MycryptoStop;
 begin
-//nothing to do here
   BlowfishBurn(KeyData);
 end;
 
-
 function DecryptUDP(s: String): String;
-var p: Byte;
-    l: Integer;
+var
+  p: Byte;
+  l: Integer;
 begin
-  Result:= '';
+  Result := '';
 
-  l:= length(s);
-  if l > MAX_UDP_PACKET then exit;
+  l := length(s);
+  if l > MAX_UDP_PACKET then
+    exit;
 
   BlowfishReset(KeyData);
   BlowfishDecryptCFB(KeyData, @s[1], @s[1], l);
-  p:= Ord(s[1]);
+
+  p := Ord(s[1]);
   if (p >= UDP_MIN_PADDING) and (p <= UDP_MAX_PADDING) then
-    Result:= Copy(s, p+1, l-p-1);
-//  writeln(result);
+    Result := Copy(s, p + 1, l - p - 1);
 end;
 
 
 function EncryptUDP(s: String): String;
-var p: Byte;
-    block: array[0..MAX_UDP_PACKET-1] of AnsiChar;
+var
+  p: Byte;
+  block: array[0..MAX_UDP_PACKET-1] of AnsiChar;
 begin
-  Result:= '';
+  Result := '';
 
-  if Length(s) + UDP_MAX_PADDING > MAX_UDP_PACKET then exit;
+  if Length(s) + UDP_MAX_PADDING > MAX_UDP_PACKET then
+    exit;
 
-  p:= Byte(RandomRange(UDP_MIN_PADDING, UDP_MAX_PADDING));
-  block[0]:= AnsiChar(p);
+  p := Byte(RandomRange(UDP_MIN_PADDING, UDP_MAX_PADDING));
+  block[0] := AnsiChar(p);
   Move(s[1], block[p], length(s));
 
   BlowfishReset(KeyData);
   BlowfishEncryptCFB(KeyData, @block, @block, p+1+length(s));
-  SetLength(Result, p+length(s)+1);
-  Move(block[0], Result[1], p+1+length(s));
-//  writeln(inttostr(length(result)));
+  SetLength(Result, p + Length(s) + 1);
+  Move(block[0], Result[1], p + 1 + Length(s));
 end;
 
 procedure MyCryptoInit;
 begin
   Randomize;
-end;
-
-procedure MyCryptoUnInit;
-begin
-// nope right now
 end;
 
 end.
