@@ -98,6 +98,7 @@
     {^} Detection for iOFTPD sites
     {^} IMDb parsing code update due to recent website changes
     {^} taskdirlist shows sitename on 'can not dirlist' announce (#227)
+    {^} !indexquery search count is selectable (#188)
     {-} TheTVDB support as API goes offline [on October 1st, 2017] some day (#175)
     {-} !sectionins command -> edit slftp.precatcher manually! (#157)
     {-} Support for older FPC compilers (at least version 3.2.0 needed!)
